<resources>
    <string name="app_name">friendat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message_here">type message here</string>
    <string name="user_status">user status</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_name">user name</string>
    <string name="profile_image">profile image</string>
    <string name="group_name">Group Name</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="add_friend">Add Friend</string>
    <string name="receiver_messages">receiver messages</string>
    <string name="time">time</string>
    <string name="sender_messages">sender_group messages</string>
    <string name="receiver_image_messages">receiver_image_messages</string>
    <string name="receiver_play_record">receiver_play_record</string>
    <string name="receiver_translated_messages">receiver translated messages</string>
    <string name="sender_image_messages">sender_image_messages</string>
    <string name="sender_play_record">sender_play_record</string>
    <string name="forget_my_password">Forget My Password</string>
    <string name="email">email</string>
    <string name="reset_password">reset password</string>
    <string name="back">back</string>
    <string name="we_just_need_your_registered_email_id_to_sent_you_password_reset_instructions">We just need your registered Email Id to sent you password reset instructions</string>
</resources>
