<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/profile_image"
            android:layout_marginTop="7dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp">
                    <ImageView
                        android:id="@+id/user_online_status"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/online"
                        android:visibility="gone"
                        android:contentDescription="@string/profile_image" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_status"
                android:textAlignment="textStart"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/request_accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@android:color/holo_green_dark"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:text="@string/accept"
                    android:visibility="gone"
                    android:layout_marginEnd="7dp"
                    />
                <Button
                    android:id="@+id/request_decline_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@android:color/holo_red_dark"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:text="@string/decline"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>