<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPasswordActivity"
    android:orientation="vertical"

    android:background="@drawable/inputs">
    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/forget_toolbar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription=""
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/forget_my_password"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/we_just_need_your_registered_email_id_to_sent_you_password_reset_instructions"
            android:textColor="@color/colorPrimary"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/inputs"
            android:padding="4dp"
            android:drawableStart="@drawable/email"
            android:layout_marginTop="20dp"
            />


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/reset_password"
            android:textColor="@android:color/background_light"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>


