<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/message_profile_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_image"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/receiver_messages_layout"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:minWidth="75dp"
                android:orientation="vertical">
                <FrameLayout
                    android:id="@+id/video_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="gone">
                    <VideoView
                        android:layout_width="250dp"
                        android:layout_height="350dp"
                        android:id="@+id/receiver_video_layout"
                        android:visibility="gone"
                        />
                    <ImageButton
                        android:id="@+id/play_video"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:src="@drawable/ic_play"
                        android:background="@color/transparent2"
                        android:scaleType="fitXY"
                        android:visibility="gone"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/receiver_messages_layout"
                    android:minWidth="75dp"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/receiver_image_messages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/profile_image"
                        android:visibility="gone"
                        android:contentDescription="@string/receiver_image_messages" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/receiver_play_record"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        app:srcCompat="@drawable/ic_play"
                        android:contentDescription="@string/receiver_play_record" />

                    <TextView
                        android:id="@+id/receiver_record_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textColor="@android:color/background_light"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/receiver_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiver_messages"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/background_light"
                    />
                <TextView
                    android:id="@+id/receiver_message_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="15dp"
                    android:text="@string/time"
                    android:textColor="@android:color/background_light"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/receiver_translated_message_layout"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="45dp"
            android:minWidth="75dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/receiver_translated_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver_translated_messages"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sender_messages_layout"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="end"
            android:minWidth="75dp"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/video_frame2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:visibility="gone">
                <VideoView
                    android:layout_width="250dp"
                    android:layout_height="350dp"
                    android:id="@+id/sender_video_layout"
                    android:visibility="gone"
                    />
                <ImageButton
                    android:id="@+id/play_video2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@drawable/ic_play"
                    android:background="@color/transparent2"
                    android:scaleType="fitXY"
                    android:visibility="gone"
                    />
            </FrameLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sender_messages_layout"
                android:minWidth="75dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/sender_image_messages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/profile_image"
                    android:visibility="gone"
                    android:contentDescription="@string/sender_image_messages" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/sender_play_record"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    app:srcCompat="@drawable/ic_play"
                    android:visibility="visible"
                    android:contentDescription="@string/sender_play_record" />

                <TextView
                    android:id="@+id/sender_record_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/background_light"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/sender_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender_messages"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:id="@+id/sender_message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:paddingEnd="15dp"
                android:paddingStart="1dp"
                android:text="@string/time"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sender_translated_message_layout"
            android:layout_marginTop="2dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="end"
            android:minWidth="75dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sender_translated_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender_messages"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>