<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/receiver_messages_layout"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:minWidth="75dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sender_group_message_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sender name"
                android:paddingTop="5dp"
                android:paddingStart="10dp"
                android:textSize="10sp"
                android:visibility="visible"
                android:textColor="@android:color/background_light"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/receiver_messages_layout"
                android:minWidth="75dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/receiver_image_group_messages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/profile_image"
                    android:visibility="gone"
                    android:contentDescription="@string/receiver_image_messages" />
            </LinearLayout>
            <TextView
                android:id="@+id/receiver_group_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver_messages"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:id="@+id/receiver_group_message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="15dp"
                android:text="@string/time"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sender_messages_layout"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="end"
            android:minWidth="75dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sender_group_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender_messages"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sender_messages_layout"
                android:minWidth="75dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/sender_image_group_messages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/profile_image"
                    android:visibility="gone"
                    android:contentDescription="@string/receiver_image_messages" />
            </LinearLayout>
            <TextView
                android:id="@+id/sender_group_message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:paddingEnd="15dp"
                android:text="@string/time"
                android:visibility="visible"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>